--- a/Pages/SacramentPrograms/Delete.cshtml
+++ b/Pages/SacramentPrograms/Delete.cshtml
@@ -5,112 +5,158 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Meeting Program</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>SacramentProgram</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ProgramDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ProgramDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.PresidingName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.PresidingName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ConductingName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ConductingName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningPrayerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningPrayerName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)
-        </dd>
-        <dt class="col-sm-2">Speakers</dt>
-        <div>
-            @for (int i = 0; i < Model.SacramentProgram.Speakers.Count; i++)
+<h3>Are you sure you want to delete this program?</h3>
+<div class="border rounded bg-white bg-opacity-75 p-4">
+    <div class="row justify-content-center">
+        <div class="col-sm-10 col-md-8 col-lg-6 border border-dark rounded p-4 opacity-90 mb-3">
+            <div class="text-center">
+                <h4>
+                    Sacrament Program <br />
+                    <span class="fs-5">@Html.DisplayFor(model => model.SacramentProgram.ProgramDate)</span>
+                </h4>
+            </div>
+            <hr />
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.PresidingName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.PresidingName)</div>
+            </div>
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ConductingName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ConductingName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningPrayerName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningPrayerName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold mt-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)
+                </div>
+            </div>
+
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)"</div>
+
+            <div class="d-flex justify-content-between fw-semibold mt-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)
+                </div>
+            </div>
+
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)"</div>
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 0)
             {
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)
-                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)
-                </dd>
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].Name)</div>
+                </div>
             }
-        </div>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingPrayerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingPrayerName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)
-        </dd>
-    </dl>
 
-    <form method="post">
-        <input type="hidden" asp-for="SacramentProgram.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+            @if (Model.SacramentProgram.SpecialMusicalNumber != null)
+            {
+                <div class="text-center fw-semibold my-3">
+                    <div>@Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+                    <div>@Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 1)
+            {
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[1].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[1].Name)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 2)
+            {
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[2].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[2].Name)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.IntermediateHymnName != null)
+            {
+                <div class="d-flex justify-content-between fw-semibold mt-3">
+                    <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">
+                        @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)
+                        @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)
+                    </div>
+                </div>
+            }
+
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)"</div>
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 3)
+            {
+                <div>
+                    <div class="d-flex justify-content-center fw-semibold mt-3">
+                        <div>Additional Speakers</div>
+                    </div>
+
+                    @for (int i = 3; i < Model.SacramentProgram.Speakers.Count; i++)
+                    {
+                        <div class="d-flex justify-content-between fw-semibold mt-1 mb-3">
+                            <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)</div>
+                            <div class="border-b-dashed flex-grow-1"></div>
+                            <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)</div>
+                        </div>
+                    }
+                </div>
+            }
+
+            <div class="d-flex justify-content-between fw-semibold mt-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)
+                </div>
+            </div>
+
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)"</div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingPrayerName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingPrayerName)</div>
+            </div>
+        </div>
+        <hr />
+        <div class="row justify-content-center">
+            <div class="col-sm-10 col-md-8 col-lg-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a asp-page="./Index" class="btn btn-outline-secondary w-100">Cancel</a>
+                    </div>
+                    <div class="col-md-6 mt-2 mt-md-0">
+                        <form method="post" class="w-100">
+                            <input type="hidden" asp-for="SacramentProgram.Id" />
+                            <button type="submit" class="btn btn-danger w-100">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
