--- a/Pages/SacramentPrograms/Details.cshtml
+++ b/Pages/SacramentPrograms/Details.cshtml
@@ -9,7 +9,7 @@
 
 <div class="border rounded bg-white bg-opacity-75 p-4">
     <div class="row justify-content-center">
-        <div class="col-sm-10 col-md-8 col-lg-6 border border-dark rounded p-4 opacity-90">
+        <div class="col-sm-10 col-md-8 col-lg-6 border border-dark rounded p-4 opacity-90 mb-3">
             <div class="text-center">
                 <h4>
                     Sacrament Program <br />
@@ -34,87 +34,125 @@
                 <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningPrayerName)</div>
             </div>
 
-            <div class="d-flex justify-content-between fw-semibold my-3">
+            <div class="d-flex justify-content-between fw-semibold mt-3">
                 <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnName)</div>
                 <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)</div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)
+                </div>
             </div>
 
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)</div>
-            </div>
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)"</div>
 
-            <div class="d-flex justify-content-between fw-semibold my-3">
+            <div class="d-flex justify-content-between fw-semibold mt-3">
                 <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnName)</div>
                 <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)</div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)
+                </div>
             </div>
 
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)</div>
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)"</div>
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 0)
+            {
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].Name)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.SpecialMusicalNumber != null)
+            {
+                <div class="text-center fw-semibold my-3">
+                    <div>@Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+                    <div>@Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 1)
+            {
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[1].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[1].Name)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 2)
+            {
+                <div class="d-flex justify-content-between fw-semibold my-3">
+                    <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[2].SpeakerType)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[2].Name)</div>
+                </div>
+            }
+
+            @if (Model.SacramentProgram.IntermediateHymnName != null)
+            {
+                <div class="d-flex justify-content-between fw-semibold mt-3">
+                    <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)</div>
+                    <div class="border-b-dashed flex-grow-1"></div>
+                    <div class="ps-1">
+                        @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)
+                        @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)
+                    </div>
+                </div>
+            }
+
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)"</div>
+
+            @if (Model.SacramentProgram.Speakers != null && Model.SacramentProgram.Speakers.Count > 3)
+            {
+                <div>
+                    <div class="d-flex justify-content-center fw-semibold mt-3">
+                        <div>Additional Speakers</div>
+                    </div>
+
+                    @for (int i = 3; i < Model.SacramentProgram.Speakers.Count; i++)
+                    {
+                        <div class="d-flex justify-content-between fw-semibold mt-1 mb-3">
+                            <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)</div>
+                            <div class="border-b-dashed flex-grow-1"></div>
+                            <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)</div>
+                        </div>
+                    }
+                </div>
+            }
+
+            <div class="d-flex justify-content-between fw-semibold mt-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)</div>
                 <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)</div>
+                <div class="ps-1">
+                    @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)
+                    @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)
+                </div>
             </div>
 
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].SpeakerType)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].Name)</div>
-            </div>
-
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
-            </div>
-
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)</div>
-            </div>
-
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)</div>
-            </div>
+            <div class="text-center fst-italic hymn-margin">"@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)"</div>
 
             <div class="d-flex justify-content-between fw-semibold my-3">
                 <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingPrayerName)</div>
                 <div class="border-b-dashed flex-grow-1"></div>
                 <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingPrayerName)</div>
             </div>
-
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)</div>
+        </div>
+        <hr />
+        <div class="row justify-content-center">
+            <div class="col-sm-10 col-md-8 col-lg-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a asp-page="./Index" class="btn btn-outline-secondary w-100">Cancel</a>
+                    </div>
+                    <div class="col-md-6 mt-2 mt-md-0">
+                        <a asp-page="./Edit" asp-route-id="@Model.SacramentProgram?.Id" class="btn btn-warning w-100">Edit</a>
+                    </div>
+                </div>
             </div>
-
-            <div class="d-flex justify-content-between fw-semibold my-3">
-                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)</div>
-                <div class="border-b-dashed flex-grow-1"></div>
-                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)</div>
-            </div>
-            @*             <dl class="row">
-            <dt class="col-sm-2">Speakers</dt>
-            <div>
-            @for (int i = 0; i < Model.SacramentProgram.Speakers.Count; i++)
-            {
-            <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)
-            @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)
-            </dd>
-            }
-            </div>
-            </dl> *@
         </div>
     </div>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.SacramentProgram?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+
