--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,20 +17,18 @@ html {
   min-height: 100%;
 }
 
-body, html {
+body {
+    background-image: url('../img/MassCircles.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     margin: 0;
     padding: 0;
     height: 100%;
-}
-
-.background {
-    background-image: url('../img/MassCircles.svg');
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .opacity-90 {
@@ -46,4 +44,12 @@ body, html {
     border-bottom-width: 1px;
     border-bottom-color: #000;
     margin-bottom: 5px;
+}
+
+.hymn-margin {
+    margin-top: -5px;
+}
+
+footer {
+    margin-top: auto;
 }
