--- a/Pages/SacramentPrograms/Create.cshtml
+++ b/Pages/SacramentPrograms/Create.cshtml
@@ -23,10 +23,15 @@
                     <input asp-for="SacramentProgram.PresidingName" class="form-control" />
                     <span asp-validation-for="SacramentProgram.PresidingName" class="text-danger"></span>
                 </div>
-                <div class="form-group my-3">
+                <div class="form-group">
                     <label asp-for="SacramentProgram.ConductingName" class="control-label fw-semibold"></label>
-                    <input asp-for="SacramentProgram.ConductingName" class="form-control" />
-                    <span asp-validation-for="SacramentProgram.ConductingName" class="text-danger"></span>
+                    <select asp-for="SacramentProgram.ConductingName" class="form-select">
+                        <option value="">-- Select --</option>
+                        <option value="Bishop Bill Black">Bishop Bill Black</option>
+                        <option value="Brother Wayne White">Brother Wayne White</option>
+                        <option value="Brother Bob Brown">Brother Bob Brown</option>
+                        <option value="To Be Determined">To Be Determined</option>
+                    </select>
                 </div>
                 <div class="form-group my-3">
                     <label asp-for="SacramentProgram.OpeningPrayerName" class="control-label fw-semibold"></label>
@@ -149,26 +154,26 @@
         function addSpeaker () {
             var index = $('.speaker-group').length;
             var inputHtml = `
-                <div class="speaker-group">
-                    <div class="form-group my-3">
-                        <div class="row align-items-end">
-                            <div class="col-md-5">
-                                <label class="control-label fw-semibold">Name</label>
-                                <input name="SacramentProgram.Speakers[${index}].Name" class="form-control" />
-                                <span class="text-danger" data-valmsg-for="SacramentProgram.Speakers[${index}].Name" data-valmsg-replace="true"></span>
-                            </div>
-                            <div class="col-md-5 mt-3 mt-md-0">
-                                <label class="control-label fw-semibold">Speaker Type</label>
-                                <input name="SacramentProgram.Speakers[${index}].SpeakerType" class="form-control" placeholder="Speaker, Youth Speaker, etc" />
-                                <span class="text-danger" data-valmsg-for="SacramentProgram.Speakers[${index}].SpeakerType" data-valmsg-replace="true"></span>
-                            </div>
-                            <div class="col-md-2 mt-3 mt-md-0">
-                                <button type="button" class="btn btn-outline-danger w-100" onclick="removeSpeaker(this)" title="Remove">&#x1F5D9;</button>
+                        <div class="speaker-group">
+                            <div class="form-group my-3">
+                                <div class="row align-items-end">
+                                    <div class="col-md-5">
+                                        <label class="control-label fw-semibold">Name</label>
+                                        <input name="SacramentProgram.Speakers[${index}].Name" class="form-control" />
+                                        <span class="text-danger" data-valmsg-for="SacramentProgram.Speakers[${index}].Name" data-valmsg-replace="true"></span>
+                                    </div>
+                                    <div class="col-md-5 mt-3 mt-md-0">
+                                        <label class="control-label fw-semibold">Speaker Type</label>
+                                        <input name="SacramentProgram.Speakers[${index}].SpeakerType" class="form-control" placeholder="Speaker, Youth Speaker, etc" />
+                                        <span class="text-danger" data-valmsg-for="SacramentProgram.Speakers[${index}].SpeakerType" data-valmsg-replace="true"></span>
+                                    </div>
+                                    <div class="col-md-2 mt-3 mt-md-0">
+                                        <button type="button" class="btn btn-outline-danger w-100" onclick="removeSpeaker(this)" title="Remove">&#x1F5D9;</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            `;
+                    `;
             $(inputHtml).appendTo("#speaker-container");
         }
 
